--- a/index.html
+++ b/index.html
@@ -1,107 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset=utf-8">
-		<meta name="keywords" content="planets, solar system, location, configuration" >
-		<meta name="description" content="Show a map of the planets for any date." >
-		<meta name="author" content="Logan J Vickery" >
-		<!--<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">-->
-		<title>Where Are The Planets?</title>
-		<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Pacifico|Open+Sans:400,700,600,300,800' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="planets.css" >
-		<link rel="shortcut icon" href="/ljv.ico" type="image/x-icon" />
-		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js' async></script>
-		<script src="planetscript.js" defer></script>
-	</head>
-	<body>
-		<div id="wrapper">
-			<h2>Where Are the Planets?</h2>
-			<div class="text">
-				<p>Have you ever wondered where the planets are on any given day? You can use this page to find out!  Just enter the date you want to see below and hit "update".</p>
-			</div>
-			<div id="change">
-				<select name="day" id="daybt" class="controls">
-					<option value="1">01</option>
-					<option value="2">02</option>
-					<option value="3">03</option>
-					<option value="4">04</option>
-					<option value="5">05</option>
-					<option value="6">06</option>
-					<option value="7">07</option>
-					<option value="8">08</option>
-					<option value="9">09</option>
-					<option value="10">10</option>
-					<option value="11">11</option>
-					<option value="12">12</option>
-					<option value="13">13</option>
-					<option value="14">14</option>
-					<option value="15">15</option>
-					<option value="16">16</option>
-					<option value="17">17</option>
-					<option value="18">18</option>
-					<option value="19">19</option>
-					<option value="20">20</option>
-					<option value="21">21</option>
-					<option value="22">22</option>
-					<option value="23">23</option>
-					<option value="24">24</option>
-					<option value="25">25</option>
-					<option value="26">26</option>
-					<option value="27">27</option>
-					<option value="28">28</option>
-					<option value="29">29</option>
-					<option value="30">30</option>
-					<option value="31">31</option>
-				</select>
-				<select name="month" id="monthbt" class="controls">
-					<option value="0">January</option>
-					<option value="1">February</option>
-					<option value="2">March</option>
-					<option value="3">April</option>
-					<option value="4">May</option>
-					<option value="5">June</option>
-					<option value="6">July</option>
-					<option value="7">August</option>
-					<option value="8">September</option>
-					<option value="9">October</option>
-					<option value="10">November</option>
-					<option value="11">December</option>
-				</select>
-				<input type="text" name="year" id="yearbt" max-length="4" value="2016" class="controls">
-				<button class="controls orangebg">Update</button>
-			</div>
-			<div id="solarsystem">
-				<div id="neptune">
-					<img id="neptune_img" src="http://loganjvickery.com/solarsystem/neptune.png">
-				</div>
-				<div id="uranus">
-					<img id="uranus_img"  src="http://loganjvickery.com/solarsystem/uranus.png">
-				</div>
-				<div id="saturn">
-					<img id="saturn_img" src="http://loganjvickery.com/solarsystem/saturn.png">
-				</div>
-				<div id="jupiter">
-					<img id="jupiter_img" src="http://loganjvickery.com/solarsystem/jupiter.png">
-				</div>
-				<div id="mars">
-					<img id="mars_img" src="http://loganjvickery.com/solarsystem/mars.png">
-				</div>
-				<div id="earth">
-					<img id="earth_img" src="http://loganjvickery.com/solarsystem/earth.png">
-				</div>
-				<div id="venus">
-					<img id="venus_img" src="http://loganjvickery.com/solarsystem/venus.png">
-				</div>
-				<div id="mercury">
-					<img id="mercury_img" src="http://loganjvickery.com/solarsystem/mercury.png">
-				</div>
-				<div id="sun">
-					<img src="http://loganjvickery.com/solarsystem/sun.png">
-				</div>
-			</div>
-			<div>
-				<p class="smalltext">Have any suggestions or want to see other things I've done? You can visit my portoflio at <a href="http://loganjvickery.com">loganjvickery.com</a>. Just use the contact form to get in touch. Thanks!
-			</div>
-		</div>
-	</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>React App</title><link href="./static/css/main.beebfed4.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,l,a=t[0],p=t[1],f=t[2],c=0,s=[];c<a.length;c++)l=a[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in p)Object.prototype.hasOwnProperty.call(p,n)&&(e[n]=p[n]);for(i&&i(t);s.length;)s.shift()();return u.push.apply(u,f||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,a=1;a<r.length;a++){var p=r[a];0!==o[p]&&(n=!1)}n&&(u.splice(t--,1),e=l(l.s=r[0]))}return e}var n={},o={1:0},u=[];function l(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=e,l.c=n,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,t){if(1&t&&(e=l(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)l.d(r,n,function(t){return e[t]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="./";var a=this["webpackJsonpplanets-react"]=this["webpackJsonpplanets-react"]||[],p=a.push.bind(a);a.push=t,a=a.slice();for(var f=0;f<a.length;f++)t(a[f]);var i=p;r()}([])</script><script src="./static/js/2.dea857ef.chunk.js"></script><script src="./static/js/main.70fa2d88.chunk.js"></script></body></html>
